--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 </header>
 <main>
   <h1>Hello from {{title}}!</h1>
-
+	<input class="form-control" type="input" [(ngModel)]="title" />
   <!-- Images (and assets) are parsed and loaded from within the public directory -->
   <img src="/img/angular.png">
 
