add bootstrap + jquery + jqueryui

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
 <p>
   Home Works!
+  Date picker
+  <input type="text" [value]="dateString" (onSelect)="onDateChange($event)" class="form-control my-date-picker" />
 </p>
